Set path to language folder and translation file

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ Theme Name: BeLikeNow Custome Theme
 Description: A one-page website I coded from scratch for a local piercing and tattoo studio.
 Version: 1.0
 Author: LoganDuran
+Text Domain: belikenow-custom-theme
+Domain Path: /languages
 */
 
 @font-face {
